﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git stable
------------------------------------------------------------------------------------------------------------------------

GUI:
	- Fixed: Unable to add SSL certificate without CA bundle (unexpected line feed in ca_bundle field)

Tickets:

------------------------------------------------------------------------------------------------------------------------
1.1.7
------------------------------------------------------------------------------------------------------------------------

2014-05-23: Laurent Declercq
	- RELEASE i-MSCP 1.1.7

Tickets:
	- Fixed: #1090: Bug - Unable to update to 1.1.6 version - Wrong update query

------------------------------------------------------------------------------------------------------------------------
1.1.6
------------------------------------------------------------------------------------------------------------------------

2014-05-23: Laurent Declercq
	- RELEASE i-MSCP 1.1.6

CONFIGS:
	- Added: Support for Percona server (Debian squeeze, wheezy / Ubuntu lucid, precise, quantal, raring, saucy)
	- Added support for MariaDB server using official repositories (Debian Jessie / Ubuntu Trusty)

ENGINE:
	- Added: MariaDB|MySQL|Percona server implementations
	- Added: Options which allow to disable compression for backups
	- Fixed: Control panel must have it own SSL certificate
	- Fixed: Even if a database backup fail, the backup must not stop. The backup script must jump to the next database
	- Fixed: iMSCP::Ext2Attributes must not act on systems which do not support extended fs attributes
	- Fixed: Reload signal not implemented in upstart < 1.10.0
	- Fixed: SQL root password must not be shown through processus's viewer (mysqldump)
	- Fixed: The backup script must set the immutable bit on the customer homedir only if it was previously set