@@ -4,7 +4,7 @@ Include /etc/proftpd/modules.conf
 # Set off to disable IPv6 support which is annoying on IPv4 only boxes.
 UseIPv6                    on
 
-ServerName                 "{HOST_NAME}"
+ServerName                 "{HOSTNAME}"
 ServerType                 standalone
 DeferWelcome               off
 
@@ -112,8 +112,8 @@ Group                      nogroup
 {SSL}  TLSLog                   /var/log/proftpd/ftp_ssl.log           # where to log to
 {SSL}  TLSProtocol              SSLv23                                 # SSLv23 or TLSv1
 {SSL}  TLSOptions               NoCertRequest                          # either to request the certificate or not
-{SSL}  TLSRSACertificateFile    {GUI_CERT_DIR}/{HOST_NAME}.pem         # SSL certfile
-{SSL}  TLSRSACertificateKeyFile {GUI_CERT_DIR}/{HOST_NAME}.pem         # SSL keyfile
+{SSL}  TLSRSACertificateFile    {GUI_CERT_DIR}/{CERTIFICATE}.pem       # SSL certfile
+{SSL}  TLSRSACertificateKeyFile {GUI_CERT_DIR}/{CERTIFICATE}.pem       # SSL keyfile
 {SSL}  TLSVerifyClient          off                                    # client verification
 {SSL}</IfModule>
 
